Crashing buffer overflow in Source/blender/imbuf/intern/radiance_hdr.c::freadcolrs. #46534

Closed
opened 2015-10-19 00:10:15 +02:00 by Ray molenkamp · 9 comments
Member

By trying to read a corrupted .hdr file it's possible to overflow the allocated line buffer causing blender to crash.

problem lines are:
https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l144
https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l152

it's not checking if j gets bigger than xmax and happily writes over the end of the buffer.

while ((code--) && (j<xmax)) {

Solves the crash.

By trying to read a corrupted .hdr file it's possible to overflow the allocated line buffer causing blender to crash. problem lines are: https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l144 https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l152 it's not checking if j gets bigger than xmax and happily writes over the end of the buffer. ``` while ((code--) && (j<xmax)) { ``` Solves the crash.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Author
Member

oldreadcolrs has the same issue

https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l87

			for (i = scan[0][EXP] << rshift; ((i > 0) && (len>0)); i--) {

fixes the issue there.

oldreadcolrs has the same issue https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/imbuf/intern/radiance_hdr.c#l87 ``` for (i = scan[0][EXP] << rshift; ((i > 0) && (len>0)); i--) { ``` fixes the issue there.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please provide the corrupt HDR.

Please provide the corrupt HDR.

This issue was referenced by 43c0f60523

This issue was referenced by 43c0f60523105c29e7e316c7666069ebd9c1b42a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

you missed the one in oldreadcolrs

you missed the one in oldreadcolrs

@LazyDodo, this doesn't crash for me and address sanitizer isn't reporting any issues either. Can you still redo an error?

@LazyDodo, this doesn't crash for me and address sanitizer isn't reporting any issues either. Can you still redo an error?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46534
No description provided.