Fix T46534: Crash loading corrupt HDR's